trying to fix the slideshow view on mobile.

--- a/assets/css/responsiveness.css
+++ b/assets/css/responsiveness.css
@@ -160,6 +160,11 @@
     text-align: center;
   }
 
+  .slider-wrapper {
+    position: relative;
+    max-width: 45%;
+    margin: 0 auto;
+  }
   /* --------------------------- */
   /* Publications and Talks Page */
   /* --------------------------- */
