--- a/assets/css/style_pg2.css
+++ b/assets/css/style_pg2.css
@@ -262,7 +262,7 @@ nav li a {
 
 .slider-wrapper{
     position: relative;
-    max-width: 48rem;
+    max-width: 45%;
     margin: 0 auto;
 }
 
